<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context="game.MarathiUT.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5sp" 
        android:paddingRight="5sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_name"
           android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            >    
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_age"
           android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_class"
           android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/std"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_div"
           android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_school"
           android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/SchoolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		/>

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_keyboard_assigned"
           android:textSize="@dimen/font_size" 
           android:focusable="false"
           />
        
        <!-- <EditText android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_keyboard_assigned"
           android:textSize="@dimen/font_size" 
           android:focusable="false"
           android:inputType="text"
 
           /> -->

         <Spinner
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textSize="@dimen/font_size"
            /> 
        
        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_std_task_rating"
           android:textSize="@dimen/font_size" />
        <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/action_register"
           android:textSize="@dimen/font_size" />
    </LinearLayout>

</ScrollView>