<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout  
        android:id="@+id/ll_gamification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12sp"
        android:paddingRight="12sp" >

        <!-- <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             -->
            <TextView
            style="@style/devanagari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_writing_speed"
            android:textSize="16sp" />

            <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="10.10"
            android:textSize="16sp" />
        
       <!--  </LinearLayout> -->
        

        <TextView
            style="@style/devanagari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_stars"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!--
           <TextView 
            android:id="@+id/stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="3"
           android:textSize="16sp" />
            -->

            <TextView
                style="@style/devanagari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="1.0"
                android:stepSize="1.0" />
        </LinearLayout>

        <!-- <TextView
            style="@style/devanagari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textSize="16sp" /> -->

        <Button
            android:id="@+id/btnEnd"
            style="@style/devanagari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/end_session"
            android:textSize="16sp" />
        
       <!--  <TextView
        android:id="@+id/phrase1_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase1_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase2_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase2_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase3_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase3_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase4_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase4_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase5_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase5_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase6_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase6_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase7_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase7_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

        <TextView
        android:id="@+id/phrase8_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />
        
    <TextView
        android:id="@+id/phrase8_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />



    <TextView
        android:id="@+id/phrase9_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase9_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase10_presented"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phrase10_typed"
        style="@style/devanagari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="16sp" /> -->
        
    </LinearLayout>

    <!--
    <GridView android:id="@+id/gridview2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnWidth="65sp"
    android:numColumns="6"
    android:layout_marginLeft="3sp"
    android:verticalSpacing="10sp"
    android:horizontalSpacing="3sp"
    android:stretchMode="columnWidth"
    android:gravity="center"
    ></GridView>
    -->

    

</ScrollView>